<resources>
    <string name="app_name">JifunzeHub</string>

    <string name="biology">Biology</string>
    <string name="biology_class">Biology class - DNA strand</string>
    <string name="biology_desc">Life is beautiful! From atoms to cells, from genes to proteins, from populations to ecosystems, biology is the study of the fascinating and intricate systems that make life possible.</string>

    <string name="chemistry">Chemistry</string>
    <string name="chemistry_class">Chemistry class - Experiment</string>
    <string name="chemistry_desc">Learn about topics ranging from the fundamentals of chemistry and details about atoms, elements and the periodic table to advanced concepts such as states of matter, gasses and their properties and the nature of substances.</string>

    <string name="computer">Computer Studies</string>
    <string name="computer_class">Computer Studies class - Monitor</string>
    <string name="computer_desc">Microsoft Office. Virtually all workers have some familiarity with Microsoft Word;Spreadsheets;PowerPoint;Microsoft Access;QuickBooks;Email;Web and Social Skills;Graphic and Writing Skills.</string>

    <string name="business">Business Studies</string>
    <string name="business_class">Business Studies - Give Money</string>
    <string name="business_desc">Combines the elements of accountancy, finance, marketing, organizational studies and economics.</string>


    <string name="math">Mathematics</string>
    <string name="math_class">Mathematics - Mathematical PI symbol</string>
    <string name="math_desc">Mathematics</string>

    <string name="english">English</string>
    <string name="english_class">English - England Flag</string>
    <string name="english_desc">English</string>

    <string name="swahili">Kiswahili</string>
    <string name="swahili_class">Kiswahili - Tanzanian Flag</string>
    <string name="swahili_desc">Kiswahili</string>

    <string name="physics">Physics</string>
    <string name="physics_class">Physics - Settings gears</string>
    <string name="physics_desc">Physics</string>

    <string name="agriculture">Agriculture</string>
    <string name="agriculture_class">Agriculture - Sprinkling crops in a farm</string>
    <string name="agriculture_desc">Agriculture</string>

    <string name="cre">Cristian Religious Education</string>
    <string name="cre_class">Cristian Religious Education - Bible</string>
    <string name="cre_desc">Cristian Religious Education</string>

    <string name="history">History</string>
    <string name="history_class">History</string>
    <string name="history_desc">History</string>

    <string name="geography">Geography</string>
    <string name="geography_class">Geography - Earth Globe</string>
    <string name="geography_desc">Geography</string>

    <string name="add_subject">Add Subject</string>
    <string name="add_a_new_subject">Add a New Subject</string>

    <!--QUIZ-->

    <string name="toast_message">"1.   Enter your name.

 2.   Enter your valid mail address.
        eg:   yourname@domain.com

 3.   Now set your password for
        security  purpose

              Enjoy the App!!</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="result_low">You Need Improvement</string>
    <string name="result_average">You are an average Quizzer</string>
    <string name="result_above_average">You are an above average Quizzer</string>
    <string name="result_good">You are a brilliant  Quizzer</string>
    <string name="form">Score  :    %d</string>

    <string name="quiz_title">Quiz\'s</string>
    <string name="quiz_description">Take a test, Select Subject?</string>

    <string name="flash_card_title">Flash Cards</string>
    <string name="flash_card_description">Add, Review, Revise</string>
    <string name="question_start">Start</string>
    <string name="app_icon">App Icon</string>
    <string name="user_welcome">Welcome !</string>
    <string name="user_pass_show">SHOW</string>
    <string name="user_forgot_password">Forgot Password !!</string>
    <string name="user_continue">Continue</string>
    <string name="user_help">Help</string>
    <string name="user_hint_name">Your Name</string>
    <string name="user_hint_email">Your Email</string>
    <string name="user_hint_password">Password</string>
    <string name="user_register">Get Started</string>
</resources>
