<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".90"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".UserActivity">


    <ImageView
        android:contentDescription="@string/app_icon"
        android:id="@+id/image_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:maxLength="15"
        android:text="@string/user_welcome"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/name_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:maxLength="15"
        android:textAlignment="center"
        android:textColor="#43c7d6"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_display">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:drawablePadding="15dp"
            android:hint="@string/user_hint_password"
            android:maxLength="15"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#53c39a"
            android:textColorHint="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/password2"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/user_pass_show"
            android:textColor="#fff" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative2"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:onClick="showDialog"
        android:text="@string/user_forgot_password"
        android:textColor="#AAFAC8"
        android:textStyle="bold"
        android:focusable="true" />

    <Button
        android:id="@+id/Continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_button"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/user_continue"
        android:textColor="#fff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/actionBarItemBackground"
        android:drawableStart="@drawable/ic_help_24dp"
        android:onClick="showHelp"
        android:text="@string/user_help"
        android:textAllCaps="false"
        android:textColor="#fff" />


</RelativeLayout>