<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".90"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".UserActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_icon"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/user"
            android:hint="@string/user_hint_name"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/color_accent"
            android:textColorHint="#fff"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".34"
            android:textAlignment="center" />

        <!--Add a spinner to select male or female-->
    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_mail_24dp"
        android:hint="@string/user_hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/color_accent"
        android:textColorHint="#fff"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:hint="@string/user_hint_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/color_accent"
            android:textColorHint="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/password"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/user_pass_show"
            android:textColor="#fff" />

    </RelativeLayout>

    <Button
        android:id="@+id/getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/user_register"
        android:textColor="#fff"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/actionBarItemBackground"
        android:drawableStart="@drawable/ic_help_24dp"
        android:onClick="showHelp"
        android:text="@string/user_help"
        android:textAllCaps="false"
        android:textColor="#fff" />

</RelativeLayout>
